Archive2/33/51d84d805e7bb2/output
main.cpp: In function 'void output_from_thread()':
main.cpp:18:24: error: aggregate 'std::ostringstream os' has incomplete type and cannot be defined
     std::ostringstream os;
                        ^
